  the name of a file. (Robert Collins)

* ``testr`` will now show the version. (Robert Collins)

* ``testr last`` when just one test run has been run works again.
  (Robert Collins)

* ``testr help command`` now shows the docstring for commands (Robert Collins)

* ``testr --help command`` or ``testr command --help`` now shows the options
  for the command. (Robert Collins)

* ``testr run --until-failure`` will repeat a test run until interrupted by
  ctrl-C or until a failure occurs. (Robert Collins, #680995)

* ``Repository.get_test_run`` now raises KeyError if asked for a missing or
  nonexistant test run. (Robert Collins)

* Sphinx has been added to tie the documentation toghether (And it is available
  on testrepository.readthedocs.org). (Robert Collins)

* ``StringArgument`` now rejects '--' - it should be handled by the use of a
  ``DoubledashArgument`` where one is expected. This is a bit awkward and does
  not permit passing '--' down to a child process, so further work may be
  needed - file a bug if this affects you. (Robert Collins)

* ``test failing --subunit`` now exits 0 unless there was a problem generating
  the stream. This is consistent with the general processing model of subunit
  generators. (Robert Collins)

* ``testr last`` now supports ``--subunit`` and when passed will output
  the stored subunit stream. Note that the exit code is always 0 when this
  is done (unless an exception occurs reading the stream) - subunit consumers
  should parse the subunit to determine success/failure. (Robert Collins)

* ``testr load`` now supports passing filenames to subunit streams to load.
  (Robert Collins, #620386)

* ``testr run`` will now fail a test run if the test process exits non-zero.
  As a side effect of this change, if the test program closes its stdout but
  does not exit, ``testr run`` will hang (waiting for the test program to
  exit). (Robert Collins)

* ``testr run --load-list FILENAME`` will limit the tests run to the test ids